name:                ProjectEuler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/pgrosslicht/ProjectEuler#readme
license:             BSD3
license-file:        LICENSE
author:              Patrick Grosslicht
maintainer:          patrick@grosslicht.com
copyright:           2017 Patrick Grosslicht
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ProjectEuler
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, clock, containers, formatting, array
  ghc-options:         -Wall -O2
  other-modules:       Util,
                       ProjectEuler.Problem001,
                       ProjectEuler.Problem002,
                       ProjectEuler.Problem003,
                       ProjectEuler.Problem010,
                       ProjectEuler.Problem011,
                       ProjectEuler.Problem012,
                       ProjectEuler.Problem013,
                       ProjectEuler.Problem014,
                       ProjectEuler.Problem015,
                       ProjectEuler.Problem016,
                       ProjectEuler.Problem017

test-suite test-all
  hs-source-dirs:     src, test
  main-is:            TestAll.hs
  default-language:   Haskell2010
  type:               exitcode-stdio-1.0
  build-depends:      base >= 4.7 && < 5, clock, formatting, containers, array, HUnit
  ghc-options:        -Wall -O2
  other-modules:      TestProblems,
                      Util,
                      ProjectEuler.Problem001,
                      ProjectEuler.Problem002,
                      ProjectEuler.Problem003,
                      ProjectEuler.Problem010,
                      ProjectEuler.Problem011,
                      ProjectEuler.Problem012,
                      ProjectEuler.Problem013,
                      ProjectEuler.Problem014,
                      ProjectEuler.Problem015,
                      ProjectEuler.Problem016,
                      ProjectEuler.Problem017
